fixed spacing

--- a/src/pages/homepage/styles.css
+++ b/src/pages/homepage/styles.css
@@ -12,8 +12,8 @@
 }
 
 .botp-logo {
-	margin-bottom: -105px;
-	margin-top: -105px;
+	margin-bottom: -200px;
+	margin-top: -200px;
 }
 
 .botp-intro {
